--- a/package.json
+++ b/package.json
@@ -22,14 +22,16 @@
   },
   "homepage": "https://github.com/Swatinem/rust-cache#readme",
   "dependencies": {
-    "@actions/cache": "^1.0.4",
-    "@actions/core": "^1.2.6",
-    "@actions/exec": "^1.0.4",
-    "@actions/glob": "^0.1.1",
-    "@actions/io": "^1.0.2"
+    "@actions/cache": "^1",
+    "@actions/core": "^1",
+    "@actions/exec": "^1",
+    "@actions/http-client": "^1",
+    "@actions/glob": "^0.1",
+    "@actions/io": "^1",
+    "@actions/tool-cache": "^1"
   },
   "devDependencies": {
-    "@vercel/ncc": "^0.25.1",
+    "@vercel/ncc": "^0.26",
     "typescript": "^4.1.2"
   },
   "scripts": {
