--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "@actions/cache": "^1",
     "@actions/core": "^1",
     "@actions/exec": "^1",
-    "@actions/http-client": "^1",
     "@actions/glob": "^0.1",
+    "@actions/http-client": "^1",
     "@actions/io": "^1",
-    "@actions/tool-cache": "^1"
+    "@actions/tool-cache": "^1",
+    "mkdirp": "^1.0.4"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.26",
+    "@types/mkdirp": "^1.0.1",
     "typescript": "^4.1.2"
   },
   "scripts": {
